# 3DEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
3DEngine/src/: batch_rendering.cpp  batch_rendering.h  camera.cpp  camera.h  camera_movement.cpp  camera_movement.h  easing.cpp  easing.h  engine.cpp  engine.h  fps_camera.cpp  fps_camera.h  frustum.cpp  frustum.h  gltf_mesh.cpp  gltf_mesh.h  key_holder.cpp  key_holder.h  light_manager.cpp  light_manager.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  model.cpp  model.h  obj_mesh.cpp  obj_mesh.h  options.h  ordinal_suffix.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  skybox.cpp  skybox.h  stb_image.cpp  (+4 more)
3DEngine/src/ecs/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  Types.hpp
